// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Address /> Is formatted correctly city, state on one line 1`] = `
<p>
  <svg
    fill="none"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
    />
    <circle
      cx="12"
      cy="10"
      r="3"
    />
  </svg>
   
  83 Example Rd
  , 
  Example City
  , 
  Example State
  , 
  8877
   
  ZZ
</p>
`;

exports[`<Address /> Is formatted correctly street name + number on one line 1`] = `
.c0 {
  cursor: default;
}

<div
  class="c0"
  data-testid="contactAddress"
  id="address"
>
  <p>
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
      />
      <circle
        cx="12"
        cy="10"
        r="3"
      />
    </svg>
     
    75 Example Rd
    , 
    Example City
    , 
    Example State
    , 
    PE 8888
     
    EX
  </p>
</div>
`;

exports[`<Address /> Is not about to dox me only displays City / State when RESTRICT_ADDRESS env var is passed in 1`] = `
.c0 {
  cursor: default;
}

<div
  class="c0"
  data-testid="contactAddress"
  id="address"
>
  <p>
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
      />
      <circle
        cx="12"
        cy="10"
        r="3"
      />
    </svg>
     
    Example City
    , 
    Example State,
     
    ZZ
  </p>
</div>
`;
